Revert "Criacao logo principal"
This reverts commit 1b2dfb6521dc96804e35fcb59e7d78526b61deda.

--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,8 @@
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Economica&family=Lato&family=Wire+One&display=swap" rel="stylesheet">
-
-
-	<link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap" rel="stylesheet">
+    
     <title>Portfólio</title>
   </head>
   <body>
