correcao clic das habilidades

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Economica&family=Lato&family=Wire+One&display=swap" rel="stylesheet">
 
 
-	<link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
 
-    <title>Portfólio</title>
+  
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+
+    <title>Wenned Silva</title>
   </head>
   <body>
     <div id="root"></div>
