--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -29,9 +29,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Economica&family=Lato&family=Wire+One&display=swap" rel="stylesheet">
-
-
-	  <link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
+	
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
 
   
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
