--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
   
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
+
     <title>Wenned Silva</title>
   </head>
   <body>
